--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <!-- Section 1: Transaction Details -->
             <div class="border border-gray-200 rounded-lg p-4 bg-gray-50">
-                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">I. Type of Challan and Transaction</h2>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-4">I. Basic Transaction Details</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     
                     <!-- More than one Buyer Field -->
@@ -544,4 +544,5 @@
         });
     </script>
 </body>
+
 </html>
